--- a/q/patches_2/index.html
+++ b/q/patches_2/index.html
@@ -1,15 +1,14 @@
 <!doctype html>
-<html lang="zh-Hans-CN">
+<html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
-<title>招贤纳士-Arts, Crafts &amp; Sewing-zlalaa</title>
+<title>Applique Patches-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
 <meta name="theme-color" content="#32CD32">
-<link rel="canonical" href="http://za.com/ad.php?p=/MakeHtml/index&type=2&date=2024-07-06">
 <link rel="stylesheet" href="/q/p.min.css">
 <link rel="stylesheet" href="/q/p.css">
 <script src="/q/j.min.js"></script>
@@ -41,17 +40,25 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/animal/" title="Animal">Animal <span class="badge">9</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/" title="Flower">Flower <span class="badge">16</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">9</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">16</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
-  <h3 class="margin-bottom-mini weight" align="center">招贤纳士</h3>
+  <h3 class="margin-bottom-mini weight" align="center">Applique Patches</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/17.html" title="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800181983602.webp"  alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery." class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="size-small flex-grow">Embroidered fabric featuring a peony-colored floral pattern,··· <br />Read More</p>
+      </a>
     </div>
   </div>
     <ul class="nav nav-page nav-divider">
-      <li><a href="/q/job/">Previous</a></li>
+      <li><a href="/q/patches/">Previous</a></li>
       <li><a href="javascript:;">Next</a></li>
     </ul>
   
