--- a/q/25.html
+++ b/q/25.html
@@ -71,7 +71,7 @@
         <time>2024-07-05</time>
 		<p>Number: A25</p> 
 		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket" /> Buy Now <span class="text-danger">&#36;</span>:19.99</sup></a><img src="/q/a.webp" alt="Cute cartoon puppy embroidered fabric patch for down jacket"/></p>
-  <p>Cute cartoon puppy embroidered fabric patch for down jacket</p><p><br/></p><p>Hot melt adhesive for cloth pasting</p><p><span style="text-wrap: nowrap;"><br/></span></p><p><span style="text-wrap: nowrap;">Complete set (17 styles in total) $:19.99</span></p><p>Size in cm</p><p><img src="/q/upload/image/20240705/1720174019141747.webp" title="1720174019141747.webp" alt="6.webp"/><img src="/q/upload/image/20240705/1720174025907665.webp" title="1720174025907665.webp" alt="7.webp"/></p>
+  <p>Cute cartoon puppy embroidered fabric patch for down jacket</p><p><br/></p><p>Hot melt adhesive for cloth pasting</p><p><span style="text-wrap: nowrap;"><br/></span></p><p><span style="text-wrap: nowrap;">Complete set (17 styles in total) $:19.99</span></p><p><br/></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -82,7 +82,7 @@
           <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240705/1720173696904058.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">Cute cartoon puppy embroidered fabric sticker</p>
+        <p class="flex-grow">Puppy cloth patch</p>
       </a>
       <a class="big-x6 flex flex-column" href="/q/upload/other/20240705/1720173696207767.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
@@ -111,6 +111,20 @@
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Puppy cloth patch</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20240705/1720174019141747.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240705/1720174019141747.webp" alt="Animal" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">Size in cm</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/image/20240705/1720174025907665.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20240705/1720174025907665.webp" alt="Animal" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">Size in cm</p>
       </a>
     </div>
   </div>
