--- a/q/26.html
+++ b/q/26.html
@@ -71,7 +71,7 @@
         <time>2024-07-05</time>
 		<p>Number: A26</p> 
 		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch" /> Buy Now <span class="text-danger">&#36;</span>:19.99</sup></a><img src="/q/a.webp" alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch"/></p>
-  <p>New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch</p><p><span style="color: rgb(51, 51, 51); font-family: -apple-system, BlinkMacSystemFont, &quot;PingFang SC&quot;, &quot;Microsoft YaHei&quot;, simsun, &quot;Segoe UI&quot;, Roboto, &quot;Helvetica Neue&quot;, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; font-size: 18px; font-variant-ligatures: no-common-ligatures; background-color: rgb(255, 255, 255);">Complete set (6 styles in total) $:19.99</span></p><p><br/></p><p><span style="color: rgb(51, 51, 51); font-family: -apple-system, BlinkMacSystemFont, &quot;PingFang SC&quot;, &quot;Microsoft YaHei&quot;, simsun, &quot;Segoe UI&quot;, Roboto, &quot;Helvetica Neue&quot;, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; font-size: 18px; font-variant-ligatures: no-common-ligatures; text-wrap: wrap; background-color: rgb(255, 255, 255);">Size in cm</span></p><p><img src="/q/upload/other/20240705/1720178898725880.webp"/></p>
+  <p>New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch</p><p><span style="color: rgb(51, 51, 51); font-family: -apple-system, BlinkMacSystemFont, &quot;PingFang SC&quot;, &quot;Microsoft YaHei&quot;, simsun, &quot;Segoe UI&quot;, Roboto, &quot;Helvetica Neue&quot;, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; font-size: 18px; font-variant-ligatures: no-common-ligatures; background-color: rgb(255, 255, 255);">Complete set (6 styles in total) $:19.99</span></p><p></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -97,6 +97,13 @@
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Rabbit Embroidered</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240706/1720239572208078.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240706/1720239572208078.webp" alt="Animal" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">Size in cm</p>
       </a>
     </div>
   </div>
