--- a/q/27.html
+++ b/q/27.html
@@ -71,7 +71,7 @@
         <time>2024-07-06</time>
 		<p>Number: A27</p> 
 		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers" /> Buy Now <span class="text-danger">&#36;</span>:19.99</sup></a><img src="/q/a.webp" alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers"/></p>
-  <p>Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers</p><p><br/></p><p>Animal Avatar Series (11 in total) $19.99</p><p>Size in cm</p><p><img src="/q/upload/image/20240706/1720226574459159.webp" title="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers" alt="Little Bear Cloth Patch"/></p><p><img src="/q/upload/image/20240706/1720226579150506.webp" title="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers" alt="Little Bear Cloth Patch"/></p>
+  <p>Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers</p><p><br/></p><p>Animal Avatar Series (11 in total) $19.99</p><p>Size in cm</p><p></p><p></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
@@ -97,6 +97,20 @@
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Little Bear Cloth Patch</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240706/1720239540383451.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240706/1720239540383451.webp" alt="Animal" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">Size in cm</p>
+      </a>
+      <a class="big-x6 flex flex-column" href="/q/upload/other/20240706/1720239543276008.webp">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240706/1720239543276008.webp" alt="Animal" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <p class="flex-grow">Size in cm</p>
       </a>
     </div>
   </div>
