--- a/q/patches/index.html
+++ b/q/patches/index.html
@@ -40,13 +40,45 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">6</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">15</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">9</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">16</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">Applique Patches</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/32.html" title="Cartoon flower butterfly embroidered fabric patch,2024-07-06 15:21:51">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720251451442410.webp"  alt="Cartoon flower butterfly embroidered fabric patch" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:29.99</strong>
+        <p class="size-small flex-grow">Embroidered badges, cartoons, flowers, butterflies, embroide··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/31.html" title="Cute cartoon cat,2024-07-06 15:15:09">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720250443946766.webp"  alt="Cute cartoon cat" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="size-small flex-grow">Cute cartoon cat embroidered badge, clothing decoration patc··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/30.html" title="Cartoon Panda Cute Embroidered Cloth Sticker,2024-07-06 14:59:58">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720249515387478.webp"  alt="Cartoon Panda Cute Embroidered Cloth Sticker" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="size-small flex-grow">Cartoon Panda Cute Embroidered Cloth StickerComputer Embroid··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/29.html" title="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch,2024-07-06 14:32:13">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720248862555502.webp"  alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:19.99</strong>
+        <p class="size-small flex-grow">Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhes··· <br />Read More</p>
+      </a>
       <a class="big-x3 flex flex-column" href="/q/28.html" title="Cartoon Rabbit Astronaut,2024-07-06 09:42:46">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720230542547710.webp"  alt="Cartoon Rabbit Astronaut" class="img-auto scale" /> </figure>
@@ -207,19 +239,11 @@
         <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
         <p class="size-small flex-grow">Tiger head embroidery sticker  <br />Read More</p>
       </a>
-      <a class="big-x3 flex flex-column" href="/q/17.html" title="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800181983602.webp"  alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery." class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
-        <p class="size-small flex-grow">Embroidered fabric featuring a peony-colored floral pattern,··· <br />Read More</p>
-      </a>
     </div>
   </div>
     <ul class="nav nav-page nav-divider">
       <li><a href="javascript:;">Previous</a></li>
-      <li><a href="javascript:;">Next</a></li>
+      <li><a href="/q/patches_2/">Next</a></li>
     </ul>
   
 </div>
