--- a/q/gbook/index.html
+++ b/q/gbook/index.html
@@ -50,8 +50,8 @@
     </div>
   </div>
     <ul class="nav nav-page nav-divider">
-      <li><a href="javascript:;">Previous</a></li>
-      <li><a href="javascript:;">Next</a></li>
+      <li><a href="javascript:;index.html">Previous</a></li>
+      <li><a href="javascript:;index.html">Next</a></li>
     </ul>
   
 </div>
