--- a/q/animal/index.html
+++ b/q/animal/index.html
@@ -52,78 +52,78 @@
           <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720250443946766.webp"  alt="Cute cartoon cat" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
-        <p class="size-small flex-grow">Cute cartoon cat embroidered badge, clothing decoration patc··· <br />Read More</p>
+        <strong class="weight-small">S/N: A31 <span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="size-small flex-grow">Cute cartoon cat embroidered badge, clothing decoration patc···</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/30.html" title="Cartoon Panda Cute Embroidered Cloth Sticker,2024-07-06 14:59:58">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720249515387478.webp"  alt="Cartoon Panda Cute Embroidered Cloth Sticker" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
-        <p class="size-small flex-grow">Cartoon Panda Cute Embroidered Cloth StickerComputer Embroid··· <br />Read More</p>
+        <strong class="weight-small">S/N: A30 <span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="size-small flex-grow">Cartoon Panda Cute Embroidered Cloth StickerComputer Embroid···</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/29.html" title="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch,2024-07-06 14:32:13">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720248862555502.webp"  alt="Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:19.99</strong>
-        <p class="size-small flex-grow">Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhes··· <br />Read More</p>
+        <strong class="weight-small">S/N: A29 <span class="text-danger">&#36;</span>:19.99</strong>
+        <p class="size-small flex-grow">Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhes···</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/28.html" title="Cartoon Rabbit Astronaut,2024-07-06 09:42:46">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720230542547710.webp"  alt="Cartoon Rabbit Astronaut" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
-        <p class="size-small flex-grow">Cartoon rabbit astronaut embroidered fabric patch cute self-··· <br />Read More</p>
+        <strong class="weight-small">S/N: A28 <span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="size-small flex-grow">Cartoon rabbit astronaut embroidered fabric patch cute self-···</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/27.html" title="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers,2024-07-06 08:35:35">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240706/1720226337562267.webp"  alt="Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:19.99</strong>
-        <p class="size-small flex-grow">Cartoon animal embroidery stickers, teddy bear cloth sticker··· <br />Read More</p>
+        <strong class="weight-small">S/N: A27 <span class="text-danger">&#36;</span>:19.99</strong>
+        <p class="size-small flex-grow">Cartoon animal embroidery stickers, teddy bear cloth sticker···</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/26.html" title="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch,2024-07-05 19:20:43">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240705/1720178843729859.webp"  alt="New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:19.99</strong>
-        <p class="size-small flex-grow">New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesiv··· <br />Read More</p>
+        <strong class="weight-small">S/N: A26 <span class="text-danger">&#36;</span>:19.99</strong>
+        <p class="size-small flex-grow">New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesiv···</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/25.html" title="Cute cartoon puppy embroidered fabric patch for down jacket,2024-07-05 17:55:53">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240705/1720173688785484.webp"  alt="Cute cartoon puppy embroidered fabric patch for down jacket" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:19.99</strong>
-        <p class="size-small flex-grow">Cute cartoon puppy embroidered fabric patch for down jacketH··· <br />Read More</p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800457809732.webp"  alt="Skull cloth patch" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
-        <p class="size-small flex-grow">Your clothes can be so gorgeous  <br />Read More</p>
+        <strong class="weight-small">S/N: A25 <span class="text-danger">&#36;</span>:19.99</strong>
+        <p class="size-small flex-grow">Cute cartoon puppy embroidered fabric patch for down jacketH···</p>
       </a>
       <a class="big-x3 flex flex-column" href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800607934008.webp"  alt="Tiger head Embroiderye sticker" class="img-auto scale" /> </figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
-        <p class="size-small flex-grow">Tiger head embroidery sticker  <br />Read More</p>
+        <strong class="weight-small">S/N: A21 <span class="text-danger">&#36;</span>:12</strong>
+        <p class="size-small flex-grow">Tiger head embroidery sticker </p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240701/1719800457809732.webp"  alt="Skull cloth patch" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">S/N: A20 <span class="text-danger">&#36;</span>:12</strong>
+        <p class="size-small flex-grow">Your clothes can be so gorgeous </p>
       </a>
     </div>
   </div>
     <ul class="nav nav-page nav-divider">
-      <li><a href="javascript:;">Previous</a></li>
-      <li><a href="javascript:;">Next</a></li>
+      <li><a href="javascript:;index.html">Previous</a></li>
+      <li><a href="javascript:;index.html">Next</a></li>
     </ul>
   
 </div>
